@@ -1,3 +1,8 @@
+2006-01-11 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b3
+
+ * Fix: fitToResize in view_photo should not be applied to movies :)
+   Thanks rebdrew from forums.
+
 2006-01-10 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b2
 
  * Fix: OOoops, german in config wizard.
